--- a/package.json
+++ b/package.json
@@ -26,7 +26,8 @@
     },
     "dependencies": {
         "passport": "0.1.x",
-        "restberry-authauth-local": "0.1.x",
+        "restberry-auth-local": "0.1.x",
+        "restberry-utils": "0.1.x",
         "underscore": "1.5.x"
     },
     "homepage": "http://restberry.com"
