--- a/package.json
+++ b/package.json
@@ -15,6 +15,8 @@
     "dependencies": {
         "http-status": "0.1.x",
         "passport": "0.1.x",
+        "restberry-auth-google": "0.2.x",
+        "restberry-auth-local": "0.2.x",
         "restberry-logger": "1.0.x",
         "underscore": "1.8.x"
     },
