--- a/package.json
+++ b/package.json
@@ -4,7 +4,7 @@
         "email": "materik@me.com"
     },
     "bugs": {
-        "url": "https://github.com/materik/restberry-auth/issues"
+        "url": "https://github.com/materik/restberry-passport/issues"
     },
     "contributors": [
         {
@@ -15,12 +15,12 @@
     "dependencies": {
         "http-status": "0.1.x",
         "passport": "0.1.x",
-        "restberry-auth-google": "0.2.x",
-        "restberry-auth-local": "0.2.x",
+        "restberry-passport-google": "1.0.x",
+        "restberry-passport-local": "1.0.x",
         "restberry-logger": "1.0.x",
         "underscore": "1.8.x"
     },
-    "description": "Authentication module for Restberry",
+    "description": "Passport wrapper for Restberry",
     "homepage": "http://restberry.com",
     "keywords": [
         "passport",
@@ -28,10 +28,10 @@
     ],
     "license": "MIT",
     "main": "index.js",
-    "name": "restberry-auth",
+    "name": "restberry-passport",
     "repository": {
         "type": "git",
-        "url": "https://github.com/materik/restberry-auth.git"
+        "url": "https://github.com/materik/restberry-passport.git"
     },
-    "version": "0.2.10"
+    "version": "1.0.0"
 }
