UPDATED the email

--- a/package.json
+++ b/package.json
@@ -1,7 +1,7 @@
 {
     "author": {
         "name": "Mattias Eriksson",
-        "email": "materik@me.com"
+        "email": "thematerik@gmail.com"
     },
     "bugs": {
         "url": "https://github.com/materik/restberry-passport/issues"
@@ -9,7 +9,7 @@
     "contributors": [
         {
             "name": "Mattias Eriksson",
-            "email": "materik@me.com"
+            "email": "thematerik@gmail.com"
         }
     ],
     "dependencies": {
@@ -37,5 +37,5 @@
         "type": "git",
         "url": "https://github.com/materik/restberry-passport.git"
     },
-    "version": "1.0.1"
+    "version": "1.0.2"
 }
