--- a/package.json
+++ b/package.json
@@ -18,6 +18,7 @@
         "restberry-passport-github": "1.0.x",
         "restberry-passport-google": "1.0.x",
         "restberry-passport-local": "1.0.x",
+        "restberry-passport-twitter": "1.0.x",
         "restberry-logger": "1.0.x",
         "restberry-utils": "1.0.x",
         "underscore": "1.8.x"
@@ -29,7 +30,8 @@
         "google",
         "local",
         "passport",
-        "restberry"
+        "restberry",
+        "twitter"
     ],
     "license": "MIT",
     "main": "index.js",
@@ -38,5 +40,5 @@
         "type": "git",
         "url": "https://github.com/materik/restberry-passport.git"
     },
-    "version": "1.0.4"
+    "version": "1.0.5"
 }
